@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Apr 2011; Nikoli <nikoli@lavabit.com> mplayer2-9999.ebuild,
+  metadata.xml:
+  update ffmpeg options
+
   12 Apr 2011; Nikoli <nikoli@lavabit.com> mplayer2-2.0.ebuild,
   mplayer2-9999.ebuild:
   fix system-ffmpeg USE, cosmetics
